# dorphan

./: .gitignore  README.md  pyproject.toml
dorphan/: __init__.py  cleaner.py  cli.py  config.py  data.py  donate.json  inventory.py  matcher.py  recovery.py  report.py  scanner.py  util.py
tests/: test_cleaner.py  test_cli.py  test_config.py  test_inventory.py  test_matcher.py  test_recovery.py  test_report.py  test_scanner.py  test_util.py
