[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "dorphan"
version = "0.1.1"
description = "Dorphan — Delete orphan app files of already uninstalled apps that Windows can't find."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "GPL-3.0-or-later" }
authors = [{ name = "Asterios Zervos" }]
keywords = ["windows", "cleanup", "uninstall", "leftovers", "cli", "disk-space"]
classifiers = [
    "Environment :: Console",
    "Operating System :: Microsoft :: Windows",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/azerv1/dorphan"
Source = "https://github.com/azerv1/dorphan"

[project.scripts]
dorphan = "dorphan.cli:main"

[tool.setuptools]
packages = ["dorphan"]

[tool.setuptools.package-data]
dorphan = ["donate.json"]
